[package]
name = "nom-recursive"
version = "0.2.0"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/nom-recursive"
keywords = ["parser", "nom"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "Extension of nom to handle left recursion"
edition = "2018"

[package.metadata.release]
pre-release-replacements = [
    {file = "../README.md", search = "nom-recursive = \"[a-z0-9\\.-]+\"", replace = "nom-recursive = \"{{version}}\""},
]

[features]
default   = []
tracer128 = []
tracer256 = []

[dependencies]
nom_locate           = "2"
nom_locate1          = {version = "1", package = "nom_locate"}
nom-recursive-macros = {path = "../nom-recursive-macros", version = "^0.2.0"}

[dev-dependencies]
nom = "5.0.0"
